--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>СравниPrice</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
   <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
             <div class="header-left">
               <a href="#" class="logo"
                 ><img src="./img/logo.svg" alt="logo"
-              /></a>
+              ></a>
               <button class="header__button button open-catalog">
                 <span class="open-catalog__icon">
                   <span></span>
@@ -26,7 +26,7 @@
 
               <div class="location">
                 <div class="location__icon">
-                  <img src="./img/icons/location-icon.svg" alt="location" />
+                  <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
                 <span class="location__lacate open-popup-location">Минск</span>
@@ -60,9 +60,9 @@
               <input
                 type="text"
                 class="search-field__input"
-                placeholder="Например, ноутбук Assus" />
+                placeholder="Например, ноутбук Assus" >
               <button class="search-field__button">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
@@ -71,7 +71,7 @@
                 href="index.html"
                 class="user-actions-point user-actions-point_mobile">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/home-icon.svg" alt="home" />
+                  <img src="./img/icons/home-icon.svg" alt="home" >
                 </span>
                 <h3 class="user-actions-point__title">Главная</h3>
               </a>
@@ -79,13 +79,13 @@
                 class="user-actions-point user-actions-point_mobile open-catalog"
                 id="MobileCatalogBtn">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/catalogue-icon.svg" alt="catalogue" />
+                  <img src="./img/icons/catalogue-icon.svg" alt="catalogue" >
                 </span>
                 <span class="user-actions-point__title">Каталог</span>
               </button>
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/equel-icon.svg" alt="comparison" />
+                  <img src="./img/icons/equel-icon.svg" alt="comparison" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -93,7 +93,7 @@
               </a>
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/favorite-icon.svg" alt="favorite" />
+                  <img src="./img/icons/favorite-icon.svg" alt="favorite" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -135,13 +135,50 @@
               <input
                 type="text"
                 class="search-field__input"
-                placeholder="Например, ноутбук Assus" />
+                placeholder="Например, ноутбук Assus" >
               <button class="search-field__button">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
           </div>
         </div>
+
+        <section class="main__hero hero">
+          <div class="hero__container">
+            <div class="hero__wrapper">
+              <div class="hero__body">
+                <div class="hero__article">
+                  <h1 class="hero__title title title_first">Apple Iphone 15</h1>
+                  <p class="hero__paragraph paragraph">
+                    С 20 сентября на всех площадках
+                  </p>
+
+                  <button class="hero__button button open-catalog">
+                    <span>Перейти в каталог</span>
+                    <img src="./img/icons/arrow-right-white.svg" alt="">
+                  </button>
+                </div>
+                <div class="hero-slider slider slider-init">
+                  <div class="slider-wrapper">
+                    <div class="slider-slide hero-image-slide">
+                      <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
+                    </div>
+                    <div class="slider-slide hero-image-slide">
+                      <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
+                    </div>
+                    <div class="slider-slide hero-image-slide">
+                      <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
+                    </div>
+                    <div class="slider-slide hero-image-slide">
+                      <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="hero__pagination"></div>
+            </div>
+          </div>
+        </section>
 
         <section class="main__blog blog">
           <div class="blog__wrapper">
@@ -153,7 +190,7 @@
                 <div class="slider-wrapper">
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -166,7 +203,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -179,7 +216,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -202,7 +239,7 @@
             <div class="articles__wrapper">
               <div class="articles__article article">
                 <div class="article__preview">
-                  <img src="./img/imgs/article-preview.png" alt="SEO-текст" />
+                  <img src="./img/imgs/article-preview.png" alt="SEO-текст" >
                 </div>
                 <div class="article__body">
                   <h2 class="article__title title title_third">SEO-текст</h2>
@@ -238,7 +275,7 @@
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__wrapper">
-            <a href="#" class="logo"><img src="./img/logo.svg" alt="logo" /></a>
+            <a href="#" class="logo"><img src="./img/logo.svg" alt="logo" ></a>
 
             <div class="footer-nav">
               <ul class="footer-nav__list">
@@ -266,17 +303,17 @@
                   <a href="#" class="footer-social__link">
                     <img
                       src="./img/icons/telegram-icon.svg"
-                      alt="telegram-icon" />
+                      alt="telegram-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" />
+                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" />
+                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" >
                   </a>
                 </li>
               </ul>
@@ -3986,7 +4023,7 @@
 
       <div class="cookie-popup popup">
         <div class="cookie-popup__icon">
-          <img src="./img/icons/cookie.png" alt="accept cookies" />
+          <img src="./img/icons/cookie.png" alt="accept cookies" >
         </div>
         <p class="cookie-popup__paragraph">
           Используя данный сайт, Вы даете согласие на использование файлов
@@ -4014,9 +4051,9 @@
                 type="text"
                 class="search-field__input"
                 id="LocInput"
-                placeholder="Найти город" />
+                placeholder="Найти город" >
               <button class="search-field__button" id="searchLocationsBtn">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
@@ -4067,6 +4104,6 @@
     <script src="./js/search.js"></script>
     <!--<script src="./js/slider.js"></script>-->
 
-    <script src="./js/slider-core.js"></script>
+    <!--<script src="./js/slider-core.js"></script>-->
   </body>
 </html>
