--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <img src="./img/icons/arrow-right-white.svg" alt="">
                   </button>
                 </div>
-                <div class="hero-slider slider slider-init">
+                <div class="hero-slider slider slider-init" data-current-slide="1">
                   <div class="slider-wrapper">
                     <div class="slider-slide hero-image-slide">
                       <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
@@ -186,7 +186,7 @@
               <h2 class="blog__title title title_second main__title">Блог</h2>
             </div>
             <div class="blog__main">
-              <div class="blog-list slider" data-scroll-pos="0">
+              <div class="blog-list slider">
                 <div class="slider-wrapper">
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
@@ -4104,6 +4104,6 @@
     <script src="./js/search.js"></script>
     <!--<script src="./js/slider.js"></script>-->
 
-    <!--<script src="./js/slider-core.js"></script>-->
+    <script src="./js/slider-core.js"></script>
   </body>
 </html>
