hero-section finished

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <img src="./img/icons/arrow-right-white.svg" alt="">
                   </button>
                 </div>
-                <div class="hero-slider slider slider-init" data-current-slide="1">
+                <div class="hero-slider slider slider-init" data-current-slide="1" data-autoplay-speed="4000">
                   <div class="slider-wrapper">
                     <div class="slider-slide hero-image-slide">
                       <img src="./img/imgs/hero-preview.png" alt="Apple Iphone 15">
@@ -175,7 +175,7 @@
                   </div>
                 </div>
               </div>
-              <div class="hero__pagination"></div>
+              <div class="hero__bullets"></div>
             </div>
           </div>
         </section>
