--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" itemscope itemtype="http://schema.org/WebSite">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
@@ -24,12 +24,12 @@
                 <span class="button__text">Каталог</span>
               </button>
 
-              <div class="location" itemscope itemtype="http://schema.org/PostalAddress">
+              <div class="location">
                 <div class="location__icon">
                   <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
-                <span class="location__lacate open-popup-location" itemprop="addressLocality">Минск</span>
+                <span class="location__lacate open-popup-location">Минск</span>
 
                 <div class="location-question popup">
                   <div class="location-question__wrapper">
@@ -134,7 +134,7 @@
         <section class="main__blog-main blog-main">
           <div class="blog-main__wrapper">
             <div class="blog-main__container">
-                <h1 class="blog-main__title title title_first" itemprop="headline">Блог</h1>
+                <h1 class="blog-main__title title title_first">Блог</h1>
             </div>
 
             <div class="blog-categories">
@@ -161,9 +161,25 @@
                         <div class="slider-slide">
                             <a href="#" class="blog-category">Гейминг</a>
                         </div>
+
+                        <div class="slider-slide">
+                            <a href="#" class="blog-category">Гейминг</a>
+                        </div>
+                        <div class="slider-slide">
+                            <a href="#" class="blog-category">Комплектующие</a>
+                        </div>
+                        <div class="slider-slide">
+                            <a href="#" class="blog-category">Гейминг</a>
+                        </div>
+                        <div class="slider-slide">
+                            <a href="#" class="blog-category">Комплектующие</a>
+                        </div>
+                        <div class="slider-slide">
+                            <a href="#" class="blog-category">Гейминг</a>
+                        </div>
                     </div>
                 </div>
-                <button class="blog-categories__button">
+                <button class="blog-categories__button" title="Показать ещё">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -172,7 +188,7 @@
 
             <div class="blog-main__container">
               <div class="blog-main__list">
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -186,7 +202,7 @@
                   </p>
                   <meta itemprop="url" content="#">
                 </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -200,50 +216,7 @@
                   </p>
                   <meta itemprop="url" content="#">
                 </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
-                  <a href="#" class="blog-card__preview">
-                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
-                  </a>
-                  <a href="#" class="blog-card__title"
-                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
-                    впечатления</span></a
-                  >
-                  <p class="blog-card__paragraph paragraph" itemprop="description">
-                    ASUS бодро начала год и представила на CES 2021 кучу новых
-                    устройств, в том...
-                  </p>
-                  <meta itemprop="url" content="#">
-                </div>
-
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
-                  <a href="#" class="blog-card__preview">
-                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
-                  </a>
-                  <a href="#" class="blog-card__title"
-                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
-                    впечатления</span></a
-                  >
-                  <p class="blog-card__paragraph paragraph" itemprop="description">
-                    ASUS бодро начала год и представила на CES 2021 кучу новых
-                    устройств, в том...
-                  </p>
-                  <meta itemprop="url" content="#">
-                </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
-                  <a href="#" class="blog-card__preview">
-                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
-                  </a>
-                  <a href="#" class="blog-card__title"
-                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
-                    впечатления</span></a
-                  >
-                  <p class="blog-card__paragraph paragraph" itemprop="description">
-                    ASUS бодро начала год и представила на CES 2021 кучу новых
-                    устройств, в том...
-                  </p>
-                  <meta itemprop="url" content="#">
-                </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -258,7 +231,7 @@
                   <meta itemprop="url" content="#">
                 </div>
 
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -272,7 +245,7 @@
                   </p>
                   <meta itemprop="url" content="#">
                 </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -286,7 +259,50 @@
                   </p>
                   <meta itemprop="url" content="#">
                 </div>
-                <div class="blog-card" itemscope itemtype="http://schema.org/BlogPosting">
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
+                  <a href="#" class="blog-card__preview">
+                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
+                  </a>
+                  <a href="#" class="blog-card__title"
+                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
+                    впечатления</span></a
+                  >
+                  <p class="blog-card__paragraph paragraph" itemprop="description">
+                    ASUS бодро начала год и представила на CES 2021 кучу новых
+                    устройств, в том...
+                  </p>
+                  <meta itemprop="url" content="#">
+                </div>
+
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
+                  <a href="#" class="blog-card__preview">
+                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
+                  </a>
+                  <a href="#" class="blog-card__title"
+                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
+                    впечатления</span></a
+                  >
+                  <p class="blog-card__paragraph paragraph" itemprop="description">
+                    ASUS бодро начала год и представила на CES 2021 кучу новых
+                    устройств, в том...
+                  </p>
+                  <meta itemprop="url" content="#">
+                </div>
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
+                  <a href="#" class="blog-card__preview">
+                    <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
+                  </a>
+                  <a href="#" class="blog-card__title"
+                    ><span itemprop="headline">Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
+                    впечатления</span></a
+                  >
+                  <p class="blog-card__paragraph paragraph" itemprop="description">
+                    ASUS бодро начала год и представила на CES 2021 кучу новых
+                    устройств, в том...
+                  </p>
+                  <meta itemprop="url" content="#">
+                </div>
+                <div class="blog-card" itemscope itemtype="https://schema.org/Blog">
                   <a href="#" class="blog-card__preview">
                     <img src="./img/imgs/blog-preview.png" alt="blog" itemprop="image" >
                   </a>
@@ -301,6 +317,8 @@
                   <meta itemprop="url" content="#">
                 </div>
               </div>
+              
+              <button class="blog-main__more-button button">Показать ещё</button>
             </div>
 
             <div class="blog-main__container">
@@ -4191,5 +4209,6 @@
     <script src="./js/search.js"></script>
     <script src="./js/slider-core.js"></script>
     <script src="./js/scroll-control.js"></script>
+    <script src="./js/actions.js"></script>
   </body>
 </html>
