--- a/static-page.html
+++ b/static-page.html
@@ -24,12 +24,12 @@
                 <span class="button__text">Каталог</span>
               </button>
 
-              <div class="location" itemscope itemtype="http://schema.org/PostalAddress">
+              <div class="location">
                 <div class="location__icon">
                   <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
-                <span class="location__lacate open-popup-location" itemprop="addressLocality">Минск</span>
+                <span class="location__lacate open-popup-location">Минск</span>
 
                 <div class="location-question popup">
                   <div class="location-question__wrapper">
@@ -132,7 +132,7 @@
           </div>
         </div>
 
-        <section class="main__article article">
+        <section class="main__article article article-page">
           <div class="article__container">
             <div class="article__wrapper">
               <h1 class="article__title title title_first" itemprop="headline">
@@ -141,7 +141,7 @@
 
               <div class="article__body" itemscope itemtype="https://schema.org/Article">
                 <div class="article__article">
-                    <h3 class="title title_third" itemprop="headline">Заголовок</h3>
+                    <h2 class="title title_third" itemprop="headline">Заголовок</h2>
 
                     <p class="paragraph" itemprop="description">
                         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -154,7 +154,7 @@
                     </p>
                 </div>
                 <div class="article__article">
-                    <h3 class="title title_third" itemprop="headline">Заголовок</h3>
+                    <h2 class="title title_third" itemprop="headline">Заголовок</h2>
 
                     <p class="paragraph" itemprop="description">
                         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -167,7 +167,7 @@
                     </p>
                 </div>
                 <div class="article__article">
-                    <h3 class="title title_third" itemprop="headline">Заголовок</h3>
+                    <h2 class="title title_third" itemprop="headline">Заголовок</h2>
 
                     <p class="paragraph" itemprop="description">
                         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
