--- a/error.html
+++ b/error.html
@@ -24,12 +24,12 @@
                 <span class="button__text">Каталог</span>
               </button>
 
-              <div class="location" itemscope itemtype="http://schema.org/PostalAddress">
+              <div class="location">
                 <div class="location__icon">
                   <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
-                <span class="location__lacate open-popup-location" itemprop="addressLocality">Минск</span>
+                <span class="location__lacate open-popup-location">Минск</span>
 
                 <div class="location-question popup">
                   <div class="location-question__wrapper">
